syntax = "proto2";

import public "common_client.proto";
import public "niuniu_server.proto";

package ddproto;

enum niuniu_enum_protoid {
    ////////////////////////////////////
    NIU_PID_HEARTBEAT = 0; //心跳协议
    NIU_PID_QUICK_CONN = 1; //
    NIU_PID_QUICK_CONN_ACK = 2; //
    NIU_PID_GAME_LOGIN = 3; //登录游戏
    NIU_PID_GAME_LOGIN_ACK = 4; //

    NIU_PID_CREATE_DESK_REQ = 5; //创建房间
    NIU_PID_CREATE_DESK_ACK = 6; //创建房间ack

    NIU_PID_ENTER_DESK_REQ = 7; //进入房间
    NIU_PID_ENTER_DESK_BC = 8; //进入房间广播

    NIU_PID_READY_REQ = 9; //  准备
    NIU_PID_READY_BC = 10; //  准备广播

    NIU_PID_START_REQ = 11; //开始比赛（发牌请求）
    NIU_PID_FAPAI_BC = 12; //发牌广播


}

//==============================创建房间===============================
message niu_create_desk_req {
    optional ProtoHeader header = 1;    // header 中传 userId
    optional niuniu_srv_desk_option option = 2;  //房间选项
}

message niu_create_desk_ack {
    optional ProtoHeader header = 1; //错误码及错误信息
    optional string deskNumber = 2;  //房间号
}


//==============================进入房间===============================
message niu_enter_desk_req {
    optional ProtoHeader header = 1;    // header 中传 userId
    optional string deskNumber = 2;  //房间号
}

message niu_enter_desk_bc {
    optional ProtoHeader header = 1;
    optional niuniu_srv_desk deskState = 2;  //房间状态
    repeated niuniu_srv_user userState = 3;  //用户状态
    optional uint32 newUser = 4; //新增的用户
}

//=============================准备===================================
message niu_switch_ready_ot {
    optional ProtoHeader header = 1;
}

message niu_switch_ready_req {
    optional ProtoHeader header = 1;
    optional bool isReady = 2;  //准备状态：true准备 false取消准备
}

message niu_switch_ready_bc {
    optional ProtoHeader header = 1;
    optional uint32 user = 2;  //切换状态的用户
    optional bool isReady = 3;  //准备状态
}

//=============================开始游戏================================
message niu_start_game_req {
    optional ProtoHeader header = 1;
}

//=============================发牌===================================
message niu_fapai_bc {
    optional ProtoHeader header = 1;
    optional niuniu_srv_poker pai = 2;  //牌
}

//=============================加倍===================================
message niu_jiabei_ot {
    optional ProtoHeader header = 1;
}

message niu_jiabei_req {
    optional ProtoHeader header = 1;
    optional int32 addNum = 2;  //加倍数量 1 2 3
}

message niu_jiabei_bc {
    optional ProtoHeader header = 1;
    optional int32 addNum = 2;  //加倍数量 1 2 3
}

//=============================抢庄===================================
//抢庄over turn
message niu_qiangzhuang_ot {
    optional ProtoHeader header = 1;
}

message niu_qiangzhuang_req {
    optional ProtoHeader header = 1;
    optional int32 addNum = 2;  //抢庄分数 1 2 3
}

message niu_qiangzhuang_bc {
    optional ProtoHeader header = 1;
    optional uint32 addUser = 2; //抢庄的人
    optional int32 addNum = 3;  //抢庄分数 1 2 3
}

//============================与庄家比牌================================

